--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,7 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
     <dimen name="main_button_height">88dp</dimen>
+    <dimen name="main_icon_size">48dp</dimen>
+    <dimen name="main_icon_margin">80dp</dimen>
     <dimen name="main_button_textsize">18sp</dimen>
 </resources>
