--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
     tools:context="com.czettner.tourguide.MainActivity">
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/eat_out"
         style="@style/home_framelayout">
 
         <TextView
@@ -22,6 +23,7 @@
     </FrameLayout>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/walk"
         style="@style/home_framelayout">
 
         <TextView
@@ -33,6 +35,7 @@
     </FrameLayout>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/sport"
         style="@style/home_framelayout">
 
         <TextView
@@ -44,6 +47,7 @@
     </FrameLayout>
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/events"
         style="@style/home_framelayout">
 
         <TextView
