--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,5 @@
     <dimen name="main_icon_size">48dp</dimen>
     <dimen name="main_icon_margin">80dp</dimen>
     <dimen name="main_button_textsize">18sp</dimen>
+    <dimen name="text_margin">16dp</dimen>
 </resources>
