--- a/app/src/main/res/layout/fragment_itemtriptarget.xml
+++ b/app/src/main/res/layout/fragment_itemtriptarget.xml
@@ -3,25 +3,30 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="@dimen/activity_horizontal_margin"
     android:orientation="horizontal">
 
     <ImageView
-        android:layout_width="88dp"
-        android:layout_height="wrap_content" />
+        android:id="@+id/list_image"
+        android:layout_width="@dimen/list_image_width"
+        android:layout_height="@dimen/list_image_width"
+        android:scaleType="centerCrop"/>
 
-    <TextView
-        android:id="@+id/name"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:hint="Name"/>
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/name"
+            android:hint="Name"
+            android:textStyle="bold"
+            style="@style/list_description" />
 
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:hint="Description" />
+        <TextView
+            android:id="@+id/description"
+            style="@style/list_description"
+            android:hint="Description" />
+    </LinearLayout>
+
 </LinearLayout>
+
