--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,4 +9,5 @@
     <dimen name="main_icon_margin">80dp</dimen>
     <dimen name="main_button_textsize">18sp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="list_image_width">88dp</dimen>
 </resources>
