--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -42,4 +42,11 @@
         <item name="android:layout_marginLeft">@dimen/activity_vertical_margin</item>
     </style>
 
+    <style name="list_description">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/text_margin</item>
+        <item name="android:textAppearance">?attr/textAppearanceListItem</item>
+    </style>
+
 </resources>
