--- a/app/src/main/res/layout/fragment_itemtriptarget_list.xml
+++ b/app/src/main/res/layout/fragment_itemtriptarget_list.xml
@@ -6,8 +6,8 @@
     android:name="com.czettner.tourguide.ItemTriptargetFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.czettner.tourguide.ItemTriptargetFragment"
     tools:listitem="@layout/fragment_itemtriptarget" />
